removes the white background of the icon

--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/wajbat.ico">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/Wajbat-Transparent.PNG">
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <!--  ask  mario about it -->
   <link rel="stylesheet" href="https://unpkg.com/@progress/kendo-theme-material@latest/dist/all.css">
   </link>
+
+  public\Wajbat-Transparent.PNG
 
   <!--
       Notice the use of %PUBLIC_URL% in the tag above.
